doing some paths

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
   href="https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.colors.min.css"
 />
 
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="assets/css/styles.css">
 
-    <script src="js/dropdownscript.js"></script>
+    <script src="assets/js/dropdownscript.js"></script>
 
   </head>
   <body>
@@ -26,7 +26,7 @@
     
       <nav id="main-nav">
         <ul>
-          <img id="ireclogo" src="./img/IREClogo.webp" alt="IrecLogo">
+          <img id="ireclogo" src="./assets/img/IREClogo.webp" alt="IrecLogo">
         </ul>
         <ul>
           <li><button id="nav-button" class="secondary">Contact</button></li>
