changes in index

--- a/index.html
+++ b/index.html
@@ -62,18 +62,28 @@
       <!-- depending on the selection of the of both dropdowns
       the src attribute of the iframe points to one of the 7 + 5 = 12 visualization -->
       <div id="visualization">
-      <iframe 
+      <!-- <iframe 
         src="https://foobar.github.io/assets/visualizations/experimental/1.html"
+      ></iframe> -->
+       <iframe 
+        src="https://ollindesigns.github.io/IREC-renderizations/visualizations/experimental/example1.html"
       ></iframe>
     </div>
       <!-- depending on the selection of the of both dropdowns
       the href attribute of the download button to one of the 7 + 5 = 12 CSV files -->
       <div id="centre">
-      <a
+      <!-- <a
         href="https://foobar.github.io/assets/data/experimental/1.csv"
         role="button"
         >Download CSV</a
-      >
+      > -->
+      <!-- nuevo enlace -->
+      <a
+        href="https://ollindesigns.github.io/IREC-renderizations/data/experimental/data-example.csv"
+        role="button"
+        >Download CSV</a>
+
+      
     </div>
   
     </main>
