--- a/index.html
+++ b/index.html
@@ -87,5 +87,20 @@
     </div>
   
     </main>
+    <footer class="container">
+      <div class="grid">
+        <div>
+          <p id="centre">Website powered by <a href="https://github.com/OllinDesigns">OllinDesigns</a>.</p>
+        </div>
+        <div>
+          <p id="centre">IREC web</p>
+        </div>
+        <div>
+          <p id="centre">Social Media</p>
+        </div>
+      </div>
+      
+
+    </footer>
   </body>
 </html>
