--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <label for="type">Type</label>
       <select id="type" required>
         <option>Experimental</option>
-        <option>Machine learning model</option>
+        <option>Machine Learning Model</option>
         <div class="grid">
       </select>
 
