--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
         <option>Experimental Property 5</option>
         <option>Experimental Property 6</option>
         <option>Experimental Property 7</option>
+        <option>Experimental Property 8</option>
       </select>
     </div>
       <!-- depending on the selection of the of both dropdowns
@@ -65,9 +66,14 @@
       <!-- <iframe 
         src="https://foobar.github.io/assets/visualizations/experimental/1.html"
       ></iframe> -->
-       <iframe 
-        src="https://ollindesigns.github.io/IREC-renderizations/visualizations/experimental/example1.html"
+
+      <iframe 
+        src="https://ollindesigns.github.io/IREC-renderizations/visualizations/experimental/1_Exp_Lattice.parameter.html"
       ></iframe>
+      <!-- este es el anterior de example 1 -->
+       <!-- <iframe 
+        src="https://ollindesigns.github.io/IREC-renderizations/visualizations/experimental/example1.html"
+      ></iframe> -->
     </div>
       <!-- depending on the selection of the of both dropdowns
       the href attribute of the download button to one of the 7 + 5 = 12 CSV files -->
@@ -79,7 +85,7 @@
       > -->
       <!-- nuevo enlace -->
       <a
-        href="https://ollindesigns.github.io/IREC-renderizations/data/experimental/data-example.csv"
+        href="https://ollindesigns.github.io/IREC-renderizations/data/experimental/1_Exp_LatticeParameter.csv"
         role="button"
         >Download CSV</a>
 
