--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
       <select id="property" required>
         <!-- depending on the selection of the first dropdown
         this options get exchanged by "Model Property 1 ... 5" -->
-        <option>Experimental Property 1</option>
-        <option>Experimental Property 2</option>
+        <option>Experimental Property 1: 'Lattice Parameter'</option>
+        <option>Experimental Property 2: 'Peak wavenumber at ≈640 cm-1'</option>
         <option>Experimental Property 3</option>
         <option>Experimental Property 4</option>
         <option>Experimental Property 5</option>
