more property names

--- a/index.html
+++ b/index.html
@@ -52,12 +52,12 @@
         this options get exchanged by "Model Property 1 ... 5" -->
         <option>Experimental Property 1: 'Lattice Parameter'</option>
         <option>Experimental Property 2: 'Peak wavenumber at ≈640 cm-1'</option>
-        <option>Experimental Property 3</option>
-        <option>Experimental Property 4</option>
-        <option>Experimental Property 5</option>
-        <option>Experimental Property 6</option>
-        <option>Experimental Property 7</option>
-        <option>Experimental Property 8</option>
+        <option>Experimental Property 3: 'Absorption at 4.4 eV'</option>
+        <option>Experimental Property 4: 'Surface Exchange Coefficient'</option>
+        <option>Experimental Property 5: 'Oxygen Diffusion Coefficient'</option>
+        <option>Experimental Property 6: 'Activation Energy'</option>
+        <option>Experimental Property 7: 'Preexponential Factor'</option>
+        <option>Experimental Property 8: 'Area Specific Resistance at 700ºC'</option>
       </select>
     </div>
       <!-- depending on the selection of the of both dropdowns
