--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
           <p id="centre"><a href="https://www.atlab.es">Albert Tarancón Group</a></p>
         </div>
         <div>
-          <p id="centre">website powered by <a href="https://github.com/OllinDesigns">OllinDesigns</a></p>
+          <p id="centre">Website powered by <a href="https://github.com/OllinDesigns">OllinDesigns</a></p>
         </div>
       </div>
     </footer>
